--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Secret Agent Supply Inc</title>
+    <title>Secret Agent Supply Inc.</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet" />
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <h1>SecretAgentSupplyInc</h1>
+      <h1>Secret Agent Supply Inc.</h1>
     </header>
     <div id="arrival">
       <h2>arrival</h2>
