Add Helvetica font-family and base 18px font-size to body and center with a width of 960px.  Add header logo and h1 elements with style and positioning.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img alt="logo.png" src="resources\images\logo.png" />
       <h1>Secret Agent Supply Inc.</h1>
     </header>
     <div id="arrival">
