--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <h1>Secret Agent Supply Inc.</h1>
     </header>
     <div id="arrival">
-      <h2>arrival</h2>
+      <div class="caption">
+        <h2>NEW ARRIVAL</h2>
+        <h1>SPORT BIKES AND MOTORCYCLES</h1>
+      </div>
     </div>
     <div id="menu">
       <h2>menu</h2>
