--- a/index.html
+++ b/index.html
@@ -19,14 +19,37 @@
     </div>
     <div id="menu">
       <h2>menu</h2>
+      <nav>
+        <span><a href="#eyewear">Eyewear</a></span>
+        <a href="#apparel">Apparel</a>
+        <a href="#gadgets">Gadgets</a>
+        <a href="#vehicles">Vehicles</a>
+        <a href="#classes">Classes</a>
+        <a href="#content">Content</a>
+      </nav>
     </div>
-    <div id="location">
-      <h2>location</h2>
-    </div>
-    <div id="hours">
-      <h2>hours</h2>
+    <div id="content">
+      <div class="item">
+        <img />
+        <h3>Exploding Pen</h3>
+      </div>
+      <div class="item">
+        <img />
+        <h3>Cellular Watch</h3>
+      </div>
+      <div class="item">
+        <img />
+        <h3>Thermal Glasses</h3>
+      </div>
+      <div id="location">
+        <h2>location</h2>
+      </div>
+      <div id="hours">
+        <h2>hours</h2>
+      </div>
     </div>
     <footer>
+      <span>Copyright Secret Agent Supply Inc.</span>
     </footer>
   </body>
 </html>
