Add css selectors to elements in menu section.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
       </div>
     </div>
     <div id="menu">
-      <h2>menu</h2>
       <nav>
-        <span><a href="#eyewear">Eyewear</a></span>
-        <a href="#apparel">Apparel</a>
-        <a href="#gadgets">Gadgets</a>
-        <a href="#vehicles">Vehicles</a>
-        <a href="#classes">Classes</a>
-        <a href="#content">Content</a>
+        <span><a href="#eyewear">Eyewear</a></span></span>
+        <span><a href="#apparel">Apparel</a></span>
+        <span><a href="#gadgets">Gadgets</a></span>
+        <span><a href="#vehicles">Vehicles</a></span>
+        <span><a href="#classes">Classes</a></span>
+        <span><a href="#content">Content</a></span>
       </nav>
     </div>
     <div id="content">
