--- a/index.html
+++ b/index.html
@@ -27,25 +27,30 @@
         <span><a href="#content">Content</a></span>
       </nav>
     </div>
-    <div id="content">
+    <div class="flex-container" id="content">
       <div class="item">
-        <img />
+        <img alt="pen.png" src="resources\images\pen.png" />
         <h3>Exploding Pen</h3>
       </div>
       <div class="item">
-        <img />
+        <img alt="watch.png" src="resources\images\watch.png" />
         <h3>Cellular Watch</h3>
       </div>
       <div class="item">
-        <img />
+        <img alt="glasses.png" src="resources\images\glasses.png" />
         <h3>Thermal Glasses</h3>
       </div>
+
+
       <div id="location">
-        <h2>location</h2>
+        <h2>Location</h2>
+        <p>-47.346436, 84.32354</p>
       </div>
       <div id="hours">
-        <h2>hours</h2>
+        <h2>Hours</h2>
+        <p>0800 - 1800</p>
       </div>
+    </div>
     </div>
     <footer>
       <span>Copyright Secret Agent Supply Inc.</span>
