--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@
     </div>
     <div class="flex-container" id="content">
       <div class="item">
-        <img alt="pen.png" src="resources\images\pen.png" />
+        <div class="img-container">
+          <img alt="pen.png" src="resources\images\pen.png" />
+        </div>
         <h3>Exploding Pen</h3>
       </div>
       <div class="item">
-        <img alt="watch.png" src="resources\images\watch.png" />
+        <div class="img-container">
+          <img alt="watch.png" src="resources\images\watch.png" />
+        </div>
         <h3>Cellular Watch</h3>
       </div>
       <div class="item">
-        <img alt="glasses.png" src="resources\images\glasses.png" />
+        <div class="img-container">
+          <img alt="glasses.png" src="resources\images\glasses.png" />
+        </div>
         <h3>Thermal Glasses</h3>
       </div>
 
