Make site responsive by adding media features to resize font and images and remove elements as the browser resizes.

--- a/index.html
+++ b/index.html
@@ -13,34 +13,37 @@
     </header>
     <div id="arrival">
       <div class="caption">
-        <h2>NEW ARRIVAL</h2>
-        <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        <div class="caption-text">
+          <h2>NEW ARRIVAL</h2>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
       </div>
     </div>
     <div id="menu">
       <nav>
-        <span><a href="#eyewear">Eyewear</a></span></span>
-        <span><a href="#apparel">Apparel</a></span>
-        <span><a href="#gadgets">Gadgets</a></span>
-        <span><a href="#vehicles">Vehicles</a></span>
-        <span><a href="#classes">Classes</a></span>
-        <span><a href="#content">Content</a></span>
+        <a id="menu-link" href="#menu">Menu</a>
+        <span><a class="menu-item" href="#eyewear">Eyewear</a></span>
+        <span><a class="menu-item" href="#apparel">Apparel</a></span>
+        <span><a class="menu-item" href="#gadgets">Gadgets</a></span>
+        <span><a class="menu-item" href="#vehicles">Vehicles</a></span>
+        <span><a class="menu-item" href="#classes">Classes</a></span>
+        <span><a class="menu-item" href="#content">Content</a></span>
       </nav>
     </div>
     <div class="flex-container" id="content">
-      <div class="item">
+      <div id="pen" class="item">
         <div class="img-container">
           <img alt="pen.png" src="resources\images\pen.png" />
         </div>
         <h3>Exploding Pen</h3>
       </div>
-      <div class="item">
+      <div id="watch" class="item">
         <div class="img-container">
           <img alt="watch.png" src="resources\images\watch.png" />
         </div>
         <h3>Cellular Watch</h3>
       </div>
-      <div class="item">
+      <div id="glasses" class="item">
         <div class="img-container">
           <img alt="glasses.png" src="resources\images\glasses.png" />
         </div>
